// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi-Org Test - Access Control of private data Org1 - query loan 5a success with loanDetails 5a 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5a",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5a for Org1",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 5a",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5a",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org1 - query loan 5b success without loanDetails 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5b",
  "details": Array [],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5b",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org1 - query loan 5c success with loanDetails 5c 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5c",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5c for Org1 and Org3",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5c",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "USD",
      "loanType": null,
      "requestedAmt": 401.7,
      "requester": Object {
        "name": "Loan Requester 5c",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 66,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5c",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org1 - query loan 5d success without loanDetails 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5d",
  "details": Array [],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5d",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org2 - query loan 5a with loanDetails 5a  1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5a",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5a for Org1",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 5a",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5a",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org2 - query loan 5b with loanDetails 5b  1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5b",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5b for Org3",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5b",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "CNY",
      "loanType": null,
      "requestedAmt": 33.8,
      "requester": Object {
        "name": "Loan Requester 5b",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 49,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5b",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org2 - query loan 5c with loanDetails 5c  1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5c",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5c for Org1 and Org3",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5c",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "USD",
      "loanType": null,
      "requestedAmt": 401.7,
      "requester": Object {
        "name": "Loan Requester 5c",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 66,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5c",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org2 - query loan 5d with loanDetails 5d  1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5d",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5d for Org2",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5d",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 5d",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5d",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org3 - query loan 5a success without loanDetails 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5a",
  "details": Array [
    null,
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5a",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org3 - query loan 5b success with loanDetails 5b 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5b",
  "details": Array [
    null,
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5b for Org3",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5b",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "CNY",
      "loanType": null,
      "requestedAmt": 33.8,
      "requester": Object {
        "name": "Loan Requester 5b",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 49,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5b",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org3 - query loan 5c success with loanDetails 5c 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5c",
  "details": Array [
    null,
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5c for Org1 and Org3",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5c",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "USD",
      "loanType": null,
      "requestedAmt": 401.7,
      "requester": Object {
        "name": "Loan Requester 5c",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 66,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5c",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control of private data Org3 - query loan 5d success without loanDetails 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5d",
  "details": Array [
    null,
  ],
  "documents": Array [],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5d",
  "status": 0,
}
`;

exports[`Multi-Org Test - Private data b4 public query loan 4 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org1 Loan 4",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 4",
      "contact": Object {
        "email": "c0004@fake.it",
        "name": "Contact 4",
        "phone": "555-0004",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 44.9,
      "requester": Object {
        "name": "Loan Requester 4",
        "registration": "BR1234567XXX4",
        "type": null,
      },
      "startDate": "1574846420904",
      "tenor": 52,
    },
  ],
  "documents": Array [],
  "ownerId": "USER_ORG1",
  "reference": "REF-ORG1-LOAN-4",
  "status": 0,
}
`;

exports[`Multi-Org Test - Private data b4 public query loan 4 again 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org1 Loan 4",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 4",
      "contact": Object {
        "email": "c0004@fake.it",
        "name": "Contact 4",
        "phone": "555-0004",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 44.9,
      "requester": Object {
        "name": "Loan Requester 4",
        "registration": "BR1234567XXX4",
        "type": null,
      },
      "startDate": "1574846420904",
      "tenor": 52,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "format": "JPG",
            "link": "http://fake.it/docs/org1DocContents-4.pdf",
          },
        },
      ],
      "reference": "REF-ORG3-DOC-4",
      "status": 0,
      "title": "Org3 Document 4",
    },
  ],
  "ownerId": "USER_ORG1",
  "reference": "REF-ORG1-LOAN-4",
  "status": 0,
}
`;

exports[`Multi-Org Test - Query Loans query document 1a 1`] = `
Object {
  "documentId": Any<String>,
  "loan": Object {
    "description": "Org1 Loan 1",
    "loanId": Any<String>,
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-LOAN-1",
    "status": 0,
    "timestamp": Any<String>,
  },
  "loanId": Any<String>,
  "ownerId": "USER_ORG1",
  "reference": "REF-ORG1-DOC-1",
  "status": 0,
  "timestamp": Any<String>,
  "title": "Org1 Document 1",
}
`;

exports[`Multi-Org Test - Query Loans query document 1b commits 1`] = `
Array [
  Object {
    "entityName": "document",
    "events": Array [
      Object {
        "type": "DocumentCreated",
      },
      Object {
        "type": "DocumentReferenceDefined",
      },
      Object {
        "type": "DocumentLoanIdDefined",
      },
      Object {
        "type": "DocumentTitleDefined",
      },
    ],
    "mspId": "Org1MSP",
    "version": 0,
  },
  Object {
    "entityName": "document",
    "events": Array [
      Object {
        "type": "PrivateDataTracked",
      },
    ],
    "mspId": "Org1MSP",
    "version": 0,
  },
  Object {
    "entityName": "document",
    "events": Array [
      Object {
        "type": "DocumentTitleDefined",
      },
    ],
    "mspId": "Org1MSP",
    "version": 2,
  },
]
`;

exports[`Multi-Org Test - Query Loans query document 2b 1`] = `
Object {
  "documentId": Any<String>,
  "loan": Object {
    "description": "Org2 Loan 2",
    "loanId": Any<String>,
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-LOAN-2",
    "status": 0,
    "timestamp": Any<String>,
  },
  "loanId": Any<String>,
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-DOC-2",
  "status": 0,
  "timestamp": Any<String>,
  "title": "Org2 Document 2",
}
`;

exports[`Multi-Org Test - Query Loans query loan 1 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org1 Loan 1",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 1 for Org1",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 1",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 1",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
    Object {
      "approvedAmt": null,
      "comment": "Org3 LoanDetails 1 for Org1",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 1",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "USD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 1",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org1 docContents 1\\" }",
          },
        },
        Object {
          "content": Object {
            "format": "PDF",
            "link": "http://fake.it/docs/org3DocContents-1-4org1.pdf",
          },
        },
      ],
      "reference": "REF-ORG1-DOC-1",
      "status": 0,
      "title": "Org1 Document 1",
    },
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "format": "PDF",
            "link": "http://fake.it/docs/org1DocContents-2fixed.pdf",
          },
        },
      ],
      "reference": "REF-ORG1-DOC-2",
      "status": 0,
      "title": "Org1 Document 2CHANGED",
    },
  ],
  "ownerId": "USER_ORG1",
  "reference": "REF-ORG1-LOAN-1",
  "status": 0,
}
`;

exports[`Multi-Org Test - Query Loans query loan 1 commits 1`] = `
Object {
  "commitId": Any<String>,
  "entityName": "loan",
  "events": Array [
    Object {
      "type": "LoanApplied",
    },
    Object {
      "type": "LoanReferenceDefined",
    },
    Object {
      "type": "LoanDescriptionDefined",
    },
  ],
  "id": Any<String>,
  "mspId": "Org1MSP",
  "version": 0,
}
`;

exports[`Multi-Org Test - Query Loans query loan 1 commits 2`] = `
Object {
  "commitId": Any<String>,
  "entityName": "loan",
  "events": Array [
    Object {
      "type": "LoanCommentDefined",
    },
  ],
  "id": Any<String>,
  "mspId": "Org1MSP",
  "version": 1,
}
`;

exports[`Multi-Org Test - Query Loans query loan 1 commits 3`] = `
Object {
  "commitId": Any<String>,
  "entityName": "loan",
  "events": Array [
    Object {
      "type": "PrivateDataTracked",
    },
  ],
  "id": Any<String>,
  "mspId": "Org2MSP",
  "version": 0,
}
`;

exports[`Multi-Org Test - Query Loans query loan 1 commits 4`] = `
Object {
  "commitId": Any<String>,
  "entityName": "loan",
  "events": Array [
    Object {
      "type": "PrivateDataTracked",
    },
  ],
  "id": Any<String>,
  "mspId": "Org3MSP",
  "version": 0,
}
`;

exports[`Multi-Org Test - Query Loans query loan 2 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 2",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 2",
      "contact": Object {
        "email": "c0002@fake.it",
        "name": "Contact 2",
        "phone": "555-0002",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 42.9,
      "requester": Object {
        "name": "Loan Requester 2",
        "registration": "BR1234567XXX2",
        "type": null,
      },
      "startDate": "1574846420902",
      "tenor": 52,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org1 docContents 1 for Org2\\" }",
          },
        },
        Object {
          "content": Object {
            "format": "PDF",
            "link": "http://fake.it/docs/org3DocContents-2-4org2.pdf",
          },
        },
      ],
      "reference": "REF-ORG2-DOC-1",
      "status": 0,
      "title": "Org2 Document 1",
    },
    Object {
      "contents": Array [],
      "reference": "REF-ORG2-DOC-2",
      "status": 0,
      "title": "Org2 Document 2",
    },
  ],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-2",
  "status": 0,
}
`;

exports[`Multi-Org Test - Query Loans query loan 3 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org3 Loan 3",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org3 LoanDetails 3",
      "contact": Object {
        "company": "Shell Company",
        "email": "c0003@fake.it",
        "name": "Contact 3",
        "phone": "555-0003",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 43.9,
      "requester": Object {
        "name": "Loan Requester 3",
        "registration": "BR1234567XXX3",
        "type": null,
      },
      "startDate": "1574846420903",
      "tenor": 53,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "format": "PDF",
            "link": "http://fake.it/docs/org3DocContents-2.pdf",
          },
        },
      ],
      "link": "Org3-Customized-Link-b",
      "reference": "REF-ORG3-DOC-2",
      "status": 0,
      "title": "Org3 Document 2",
    },
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org3 docContents 1\\" }",
          },
        },
      ],
      "link": "Org3-Customized-Link-a",
      "reference": "REF-ORG3-DOC-1",
      "status": 0,
      "title": "Org3 Document 1",
    },
  ],
  "ownerId": "USER_ORG3",
  "reference": "REF-ORG3-LOAN-3",
  "status": 0,
}
`;
